# ai-guest-list

./: .gitignore  LICENSE  README.md  SECURITY.md  preview.html  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  release.yml
acctsw/: __init__.py  accounts.py  appalive.py  bridge.py  claudetoken.py  cli.py  codexhome.py  context.py  credlocations.py  errors.py  headroom.py  identity.py  install.py  keychain.py  launcher.py  paths.py  procenv.py  selection.py  state.py  switch.py  usage.py  util.py  web_dot.py
app/: __init__.py  design-source.html  icon.icns  menubar.py  terminal.py  web_state.py
app/web/: app.mjs  bundle.js  index.html  package.json  preview.html  render.mjs  render.test.mjs  styles.css
app/web/fonts/: LICENSE.md
docs/: PLAN.md  RELEASING.md  SECURITY-headroom.md  VERIFY.md  headroom-handover.md
scripts/: build-web.py  run-app.sh  screenshots.py  smoke.sh  verify.sh
tests/: conftest.py  test_accounts_switch.py  test_app_support.py  test_appalive.py  test_bridge.py  test_bundle_drift.py  test_claudetoken.py  test_cli.py  test_context.py  test_headroom.py  test_headroom_live.py  test_identity.py  test_install.py  test_keychain.py  test_launcher.py  test_selection.py  test_smoke.py  test_state.py  test_status_taxonomy.py  test_switch_safety.py  test_terminal.py  test_usage.py  test_util.py
tests/fixtures/: door_cases.json  dot_cases.json
