[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-guest-list"
version = "0.1.0"
description = "Menubar app + CLI that auto-switches between Codex/Claude accounts on usage limits and resumes your work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fheinfling" }]
keywords = ["codex", "claude", "account-switcher", "macos", "menubar", "usage-limits"]

# The engine itself is stdlib-only. The menubar app needs pyobjc.
dependencies = []

[project.optional-dependencies]
app = ["pyobjc-core>=10.3", "pyobjc-framework-Cocoa>=10.3", "pyobjc-framework-WebKit>=10.3"]
build = ["py2app>=0.28"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
acctsw = "acctsw.cli:main"

[tool.setuptools.packages.find]
include = ["acctsw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
